add verses tag plugin, add Israel-Palestine statement

--- a/nach-2024/Joshua/_posts/2024-02-01-1.md
+++ b/nach-2024/Joshua/_posts/2024-02-01-1.md
@@ -1,5 +1,6 @@
 ---
 layout: post
+includeStatement: 1
 book: Joshua
 chapter: 1
 verse: 18
@@ -7,13 +8,11 @@ heTitle: רק חזק
 tlTitle: Raq Ḥazaq
 ---
 
-<div class="verses"><table><tbody><tr>
-<td class="he" dir="rtl">רַ֖ק חֲזַ֥ק וֶאֱמָֽץ</td>
-<td class="tl">raq ḥazak ve’ematz</td>
-<td class="tr">just [be] strong and courageous</td>
-</tr></tbody></table>
-<a class="verses-attrib" href="https://www.sefaria.org/Joshua.1.18">Joshua 1:18</a>
-</div>
+{% verses %}
+{% vhe רַ֖ק חֲזַ֥ק וֶאֱמָֽץ %}
+{% vtl raq ḥazak ve’ematz %}
+{% vtr just [be] strong and courageous %}
+{% endverses Joshua 1:18 %}
 
 - Said earlier word-for-word at 1:7, and at 1:6 and 1:9 without the first word
 - Nice rhyming to reinforce the last three words of the first chapter
