add he filter plugin, add Joshua 2 post

--- a/nach-2024/Joshua/_posts/2024-02-01-1.md
+++ b/nach-2024/Joshua/_posts/2024-02-01-1.md
@@ -10,7 +10,7 @@ tlTitle: Raq Ḥazaq
 
 {% verses %}
 {% vhe רַ֖ק חֲזַ֥ק וֶאֱמָֽץ %}
-{% vtl raq ḥazak ve’ematz %}
+{% vtl raq ḥazaq ve’ematz %}
 {% vtr just [be] strong and courageous %}
 {% endverses Joshua 1:18 %}
 
