add custom liquid, tweak style, add posts through Samson story

--- a/nach-2024/Joshua/_posts/2024-02-01-1.md
+++ b/nach-2024/Joshua/_posts/2024-02-01-1.md
@@ -5,12 +5,12 @@ book: Joshua
 chapter: 1
 verse: 18
 heTitle: רק חזק
-tlTitle: Raq Ḥazaq
+tlTitle: Rak Chazak
 ---
 
 {% verses %}
 {% vhe רַ֖ק חֲזַ֥ק וֶאֱמָֽץ %}
-{% vtl raq ḥazaq ve’ematz %}
+{% vtl rak chazak ve’ematz %}
 {% vtr just [be] strong and courageous %}
 {% endverses Joshua 1:18 %}
 
