--- a/nach-2024/Joshua/_posts/2024-02-02-2.md
+++ b/nach-2024/Joshua/_posts/2024-02-02-2.md
@@ -10,7 +10,7 @@ tlTitle: ʻAltah ʻAleihem ʻAl
 
 {% verses %}
 {% vhe עָלְתָ֥ה עֲלֵיהֶ֖ם עַל־הַגָּֽג %}
-{% vtl ʻaltah ʻaleihem ʻal-hagag %}
+{% vtl ʻaltah ʻaleihem ʻal hagag %}
 {% vtr [she] went up to them on the roof %}
 {% endverses Joshua 2:8 %}
 
