upgrade to Jekyll 4.3.3, remove debugging in jekyll.yml

--- a/nach-2024/Judges/_posts/2024-02-29-5.md
+++ b/nach-2024/Judges/_posts/2024-02-29-5.md
@@ -33,6 +33,6 @@ enTitle: Poetry in Every Word
 
 - *Honorable mention, adapted from Hannah:* While *Devorah* commands armies but does no violence herself, *Ya’el* remains in her own home but takes a man’s life with her own hands. Interesting comparison/contrast.
 
-- *Honorable mention:* Another of the rare times the Tanakh gets special formatting! (See [my notes on Joshua 12]({{ site.baseurl }}{% post_url nach-2024/Joshua/2024-02-12-12 %}).) This time it’s the “brick” pattern also used for the Song of the Sea. For examples, see this chapter [in the Codex Cairensis](https://en.wikipedia.org/w/index.php?title=File:Cairo-codex-nevi%27im.pdf&page=44) and [in the Lenningrad Codex](https://commons.wikimedia.org/w/index.php?title=File:Leningrad-codex-07-judges.pdf&page=6).
+- *Honorable mention:* Another of the rare times the Tanakh gets special formatting! (See [my notes on Joshua 12]({% post_url nach-2024/Joshua/2024-02-12-12 %}).) This time it’s the “brick” pattern also used for the Song of the Sea. For examples, see this chapter [in the Codex Cairensis](https://en.wikipedia.org/w/index.php?title=File:Cairo-codex-nevi%27im.pdf&page=44) and [in the Lenningrad Codex](https://commons.wikimedia.org/w/index.php?title=File:Leningrad-codex-07-judges.pdf&page=6).
 
 - *Honorable mention:* Maybe this goes without saying (because I think I’ve known this for years) but this is potentially the oldest text included in the Bible. Alter even suggests that potentially it was composed right after the events it describes (!!), and although that there seems to be quite a bit of scholarly disagreement about exactly how contemporary it is, no one argues that it is very old.
