--- a/nach-2024/Judges/_posts/2024-03-04-9.md
+++ b/nach-2024/Judges/_posts/2024-03-04-9.md
@@ -13,7 +13,7 @@ enTitle: Parable
 - Many online sources claim that this as the first {{ 'משל' | he: 'mashal' }} in the Hebrew Bible – it is certainly the first in Nach that I’ve noticed.
 <!--more-->
 - The same online sources as above usually also claim that this tree-based story is sometimes told on {{ 'ט״ו בשבת' | he: 'tu bish’vat' }}, the Jewish agricultural New Year prescribed in the *Torah* – which in modern times has become sort of a Jewish Earth Day where people plant trees. But, I could not find a source goes beyond just repeating the same one-sentence claim, and I've never heard of this tradition, so it may not be widespread or very old.
-- The etymological connection between the word {{ 'משל' | he: 'mashal', 'parable' }} and the subject of the parable {{ 'מֹשֵל' | he: 'moshel', 'ruling' }}, is impossible for me to ignore. I can’t find anything which explains why these two words share the same root, but it’s interesting that they do. The latter word features repeatedly in [my notes on Judges 8]({{ site.baseurl }}{% post_url nach-2024/Judges/2024-03-03-8 %}).
+- The etymological connection between the word {{ 'משל' | he: 'mashal', 'parable' }} and the subject of the parable {{ 'מֹשֵל' | he: 'moshel', 'ruling' }}, is impossible for me to ignore. I can’t find anything which explains why these two words share the same root, but it’s interesting that they do. The latter word features repeatedly in [my notes on Judges 8]({% post_url nach-2024/Judges/2024-03-03-8 %}).
 - Like the previous section, this reads to me as a warning against monarchy in general (i.e. those who would be good at being king don’t want to be, since they have other things for which they are needed – and those who want to be king will not be good, since what they really want is power and violence). It again makes me wonder under what circumstances a successful Israelite monarchy will be formed, and whether the assembler of this book views that as a positive or negative development.
 
 <!--break-->
