add posts up to Judges 18

--- a/nach-2024/Judges/_posts/2024-03-11-16.md
+++ b/nach-2024/Judges/_posts/2024-03-11-16.md
@@ -3,7 +3,7 @@ layout: post
 includeStatement: 1
 book: Judges
 chapter: 16
-enTitle: Oblivious Samson
+enTitle: Confused About Samson
 ---
 
 - How does Samson not figure out that Delilah is the one binding him in all these various ways?? He tells a method to her, then the next time he falls asleep, the Philistines are attacking and he conveniently happens to be bound in the exact way he told her – and then she gets mad at him for lying and asks him again about how to bind him?? She even gets mad and specifically calls out “three times you’ve lied to me about how to bind you” after him getting bound in his sleep three times – like, how, does he not put two and two together!! I feel like Samson has definitely been the “dumb brute” archetype up to now, but this turns it up to the max.
