add about, favorites, and index pages,

--- a/nach-2024/Joshua/_posts/2024-02-11-11.md
+++ b/nach-2024/Joshua/_posts/2024-02-11-11.md
@@ -4,6 +4,7 @@ includeStatement: 1
 book: Joshua
 chapter: 11
 enTitle: The Israel-Palestine Conflict and Joshua
+tags: fav
 ---
 
 - Despite continuing to read a chapter every day, I have been having a harder and harder time interacting with this text as each day passes. I think I figured out why: to me, this story parallels the current Israeli-Palesinian conflict in a very essential and troubling way.
