--- a/nach-2024/Joshua/_posts/2024-02-13-13.md
+++ b/nach-2024/Joshua/_posts/2024-02-13-13.md
@@ -10,4 +10,5 @@ enTitle: Inheritance
 
 - The word {{ 'נחלה' | he: 'nachalah', 'inheritance' }}, translated as “estate” by Alter, is used repeatedly in this chapter – see verses: 7-8, 14, 23, 28, 32-33. Almost always, it is used to refer to land given by God to a tribe of Israel.
 - I’m most familiar with this word in the context of the extended Kiddush prayer (blessing over wine) said on Friday nights. Its penultimate verse reads: {{ 'ושבת קודשך … הִנְחַלְתַנו' | he: 'v’shabbat kodshecha … hinchaltanu', 'and Your holy Shabbat … You make our inheritance' }}.
+<!--more-->
 - For diasporic Jews who no longer hold any official tribal portion of the holy land, it's the inheritance given to the tribe of Levi, similar to what’s expressed in the Kiddush, that rings the most true: {{ 'Joshua 13:33' | sefaria }}: {{ 'יי אלֹהי ישראל הוא נחלתם' | he: 'Adonai elohei yisra’el hu nachalatam', 'Adonai, God of Yisrael, is their inheritance' }}. It is *Adonai* - praising Him and following His *mitzvot* – that I view as my portion, my inheritance.
