--- a/nach-2024/Joshua/_posts/2024-02-21-21.md
+++ b/nach-2024/Joshua/_posts/2024-02-21-21.md
@@ -4,6 +4,7 @@ includeStatement: 1
 book: Joshua
 chapter: 21
 enTitle: Extra Verses, and a Wrong Consensus?
+tags: fav
 ---
 
 - Robert Alter, my [Koren](https://korenpub.com/) Hebrew Tanakh, the [OU](https://outorah.org/p/183910/)’s daily Nach Yomi email, and [Sefaria](https://www.sefaria.org/texts) (which hosts an online Hebrew/English Tanakh) all mention the fact that in some editions, there are two extra verses after {{ 'Joshua 21:36' | sefaria }}.
