--- a/nach-2024/Judges/_posts/2024-03-04-9.md
+++ b/nach-2024/Judges/_posts/2024-03-04-9.md
@@ -6,6 +6,7 @@ chapter: 9
 heTitle: משל
 tlTitle: Mashal
 enTitle: Parable
+tags: fav
 ---
 
 - This chapter contains {{ 'משל יותם' | he: 'Mashal Yotam' }}, the Parable of Jotham.
