--- a/nach-2024/Judges/_posts/2024-03-06-11.md
+++ b/nach-2024/Judges/_posts/2024-03-06-11.md
@@ -4,6 +4,7 @@ includeStatement: 1
 book: Judges
 chapter: 11
 enTitle: The State of Israel and Jephthah
+tags: fav
 ---
 
 - The diplomatic negotiation between *Yiftach* (Jephthah) and the Ammonites, as with many passages in Joshua, reminds me of arguments used to defend the modern State of Israel.
