--- a/nach-2024/Judges/_posts/2024-03-12-17.md
+++ b/nach-2024/Judges/_posts/2024-03-12-17.md
@@ -17,7 +17,7 @@ enTitle: “What Can You Do”
 {% vtr there was no king in <i>Yisrael</i>, %}
 {% brverses %}
 {% vhe אִ֛ישׁ הַיָּשָׁ֥ר בְּעֵינָ֖יו יַעֲשֶֽׂה׃ %}
-{% vtl ish hayashar b’einav ya’aseh. %}
+{% vtl ish hayashar b‘einav ya‘aseh. %}
 {% vtr a man did what was right in his eyes. %}
 {% endverses Judges 17:6 %}
 
