--- a/nach-2024/Joshua/_posts/2024-02-12-12.md
+++ b/nach-2024/Joshua/_posts/2024-02-12-12.md
@@ -6,6 +6,7 @@ chapter: 12
 verse: 9-24
 heTitle: מלך … אחד
 tlTitle: Melech … Echad
+tags: fav
 ---
 
 - This chapter contains one of the rare times that the Hebrew text breaks out of a strict paragraph-based layout in the traditional scribal tradition. There are only seven to ten such occurrences total, depending on the tradition – see [this stackoverflow answer](https://judaism.stackexchange.com/q/95500).
