add images to Joshua 12 post, tweak img formatting, tweak favs

--- a/nach-2024/Joshua/_posts/2024-02-12-12.md
+++ b/nach-2024/Joshua/_posts/2024-02-12-12.md
@@ -10,7 +10,23 @@ tags: fav
 ---
 
 - This chapter contains one of the rare times that the Hebrew text breaks out of a strict paragraph-based layout in the traditional scribal tradition. There are only seven to ten such occurrences total, depending on the tradition – see [this stackoverflow answer](https://judaism.stackexchange.com/q/95500).
-- Instead, a special layout is used for these verses in almost all Hebrew versions of the *Tanakh* – including [in the Codex Cairensis](https://en.wikipedia.org/w/index.php?title=File%3ACairo-codex-nevi%27im.pdf&page=19) (895 CE), [in the Aleppo Codex](https://commons.wikimedia.org/w/index.php?title=File:Aleppo-HighRes2-Neviim1-Joshua.pdf&page=15) (circa 920 CE), and [in the Lenningrad Codex](https://commons.wikimedia.org/w/index.php?title=File:Leningrad-codex-06-joshua.pdf&page=15) (1008 CE), the oldest manuscripts of the Hebrew text of the *Tanakh* which contain this chapter.
+- Instead, a special layout is used for these verses in almost all Hebrew versions of the *Tanakh* – including [in the Codex Cairensis](https://en.wikipedia.org/w/index.php?title=File%3ACairo-codex-nevi%27im.pdf&page=19) (895 CE), [in the Aleppo Codex](https://commons.wikimedia.org/w/index.php?title=File:Aleppo-HighRes2-Neviim1-Joshua.pdf&page=15) (circa 920 CE), and [in the Lenningrad Codex](https://commons.wikimedia.org/w/index.php?title=File:Leningrad-codex-06-joshua.pdf&page=15) (1008 CE), the oldest manuscripts of the Hebrew text of the *Tanakh* which contain this chapter:
+
+<div class="img-block">
+  <figure>
+    <img src="{{ site.baseurl }}/assets/images/Joshua-12-Cairensis.jpg" alt="Joshua 12 in the Codex Cairensis" style="max-width: 450px"/>
+    <figcaption>Joshua 12 in the Codex Cairensis</figcaption>
+  </figure>
+  <figure>
+    <img src="{{ site.baseurl }}/assets/images/Joshua-12-Aleppo.jpg" alt="Joshua 12 in the Aleppo Codex" style="max-width: 330px" />
+    <figcaption>Joshua 12 in the Aleppo Codex</figcaption>
+  </figure>
+  <figure>
+    <img src="{{ site.baseurl }}/assets/images/Joshua-12-Lenningrad.jpg" alt="Joshua 12 in the Lenningrad Codex" style="max-width: 330px" />
+    <figcaption>Joshua 12 in the Lenningrad Codex</figcaption>
+  </figure>
+</div>
+
 <!--more-->
-- In most versions, for the counting of the slain kings, the text takes a four column layout: the first and third columns each beginning with {{ 'מלך' | he: 'melech', 'king of' }} followed by name of the slain king, and the second and fourth columns each contain only the word {{ 'אחד' | he: 'echad', 'one' }}. In some, there are only two columns, such as in my *Tanakh*. For example, the first half of {{ 'Joshua 12:9' | sefaria }}: {{ 'מלך יריחו / אחד' | he: 'melech yericho / echad', 'King of Jericho: / one' }}.
+- In most versions, including the above, the text takes a four column layout for the counting of the slain kings: the first and third columns each beginning with {{ 'מלך' | he: 'melech', 'king of' }} followed by name of the slain king, and the second and fourth columns each contain only the word {{ 'אחד' | he: 'echad', 'one' }}. In some, there are only two columns, such as in my *Tanakh*. For example, the first half of {{ 'Joshua 12:9' | sefaria }}: {{ 'מלך יריחו / אחד' | he: 'melech yericho / echad', 'King of Jericho: / one' }}.
 - Note that the only exception to the otherwise strict wording used for each column is the second half of the final verse, {{ 'Joshua 12:24' | sefaria }}: {{ 'כל-מלכים שלשים / ואחד' | he: 'kol m’lachim sh’loshim / v’echad', 'all the kings: thirty / and one' }}. However, to my eye, the changes are subtle enough that the passage looks uniform and imposing, like a well-disciplined army. I believe this is likely the intended effect on the reader.
