--- a/nach-2024/Joshua/_posts/2024-02-15-15.md
+++ b/nach-2024/Joshua/_posts/2024-02-15-15.md
@@ -9,6 +9,6 @@ enTitle: Land Allotments
 - I used the following map from [this site](https://www.bible.ca/maps/bible-maps-master-index-borders-twelve-12-tribes-israel-promised-land-joshua13-22-conquest-1400BC.htm) to follow along with all these land allotments:
 
 <!--more-->
-![Land Allotments](https://www.bible.ca/maps/maps-master-archeological-bible-study-borders-twelve-12-tribes-israel-promised-division-divided-land-joshua13-22-conquest-1400BC.jpg)
+<img src="https://www.bible.ca/maps/maps-master-archeological-bible-study-borders-twelve-12-tribes-israel-promised-division-divided-land-joshua13-22-conquest-1400BC.jpg" alt="Land Allotments" style="width: 75%" />
 
 - Even with that map – the most detailed I could find on Google - I was still lost!
