add last post from Judges, tweak various minor details

--- a/nach-2024/Joshua/_posts/2024-02-03-3.md
+++ b/nach-2024/Joshua/_posts/2024-02-03-3.md
@@ -22,6 +22,6 @@ tags: fav
 - As Alter says, that verb {{ 'עבר' | he: '‘aver', 'cross over' }} is used throughout this chapter. But, because in Biblical Hebrew the verb comes before the noun, it leads to situations like this where your expectations can be subverted! Rearranging the translation to take this word order into account shows what I mean: “and they spent the night before they crossed over. And at the end of three days they crossed over, the overseers, through the camp…”
 
 <!--more-->
-- *Honorable mention:* {{ 'Joshua 3:11' | sefaria }}: {{ 'אֲר֣וֹן הַבְּרִ֔ית אֲד֖וֹן כׇּל־הָאָ֑רֶץ' | he: 'aron ha-b’rit adon kol ha’aretz', 'ark of the covenant of the lord of all the earth' }} is nice in Hebrew because of the similarity between {{ 'ארון' | he: 'aron', 'ark' }} and {{ 'אדון' | he: 'adon', 'lord' }}
+- *Honorable mention:* {{ 'Joshua 3:11' | sefaria }}: {{ 'אֲר֣וֹן הַבְּרִ֔ית אֲד֖וֹן כׇּל־הָאָ֑רֶץ' | he: 'aron ha’b’rit adon kol ha’aretz', 'ark of the covenant of the lord of all the earth' }} is nice in Hebrew because of the similarity between {{ 'ארון' | he: 'aron', 'ark' }} and {{ 'אדון' | he: 'adon', 'lord' }}
 
 - *Question:* What’s the deal with the Ark of the Covenant? It seems to be pretty important in the time period this text is about but I’ve never heard any Jews really talk about it as an important thing. Does anybody in modern times care about it in more theological rather than historical way?
