--- a/nach-2024/Joshua/_posts/2024-02-11-11.md
+++ b/nach-2024/Joshua/_posts/2024-02-11-11.md
@@ -2,7 +2,7 @@
 layout: post
 includeStatement: 1
 book: Joshua
-chapter: 11
+chapter: 9-11
 enTitle: The Israel-Palestine Conflict and Joshua
 tags: fav
 ---
