--- a/nach-2024/Joshua/_posts/2024-02-18-18.md
+++ b/nach-2024/Joshua/_posts/2024-02-18-18.md
@@ -6,5 +6,5 @@ chapter: 18
 enTitle: Even More Looking Ahead to Samuel
 ---
 
-- The only thing I have to say is an addendum to my notes on Joshua 16, which is that Alter even uses Samuel as a *reference* for confirming the historicity of {{ 'Joshua 18:1' | sefaria }}!
+- The only thing I have to say is an addendum to [my notes on Joshua 16]({% post_url nach-2024/Joshua/2024-02-16-16 %}, which is that Alter even uses Samuel as a *reference* for confirming the historicity of {{ 'Joshua 18:1' | sefaria }}!
 - After doing even more research online, it seems the scholarly consensus is indeed that Joshua and Judges are entirely later creations (though they, at least in part, reflect oral accounts), while Samuel contains of a number of contemporary sources stitched together by a later editor. Even more excited for Samuel!
