--- a/nach-2024/Judges/_posts/2024-02-25-1.md
+++ b/nach-2024/Judges/_posts/2024-02-25-1.md
@@ -9,7 +9,7 @@ enTitle: The “Wild West”
 
 {% verses %}
 {% vhe וַֽיְקַצְּצ֔וּ אֶת־בְּהֹנ֥וֹת יָדָ֖יו וְרַגְלָֽיו׃ %}
-{% vtl va-y’ka-tz’tzu et ha-b’honot yadav v’raglav %}
+{% vtl va’y’ka’tz’tzu et ha’b’honot yadav v’raglav %}
 {% vtr and they cut off the thumbs of his hands and feet %}
 {% brdotsverses %}
 {% vhe כַּאֲשֶׁ֣ר עָשִׂ֔יתִי כֵּ֥ן שִׁלַּם־לִ֖י אֱלֹהִ֑ים %}
