--- a/nach-2024/Judges/_posts/2024-03-01-6.md
+++ b/nach-2024/Judges/_posts/2024-03-01-6.md
@@ -9,7 +9,7 @@ enTitle: “Have I Not Sent You?”
 
 {% verses %}
 {% vhe לֵ֚ךְ בְּכֹחֲךָ֣ זֶ֔ה וְהוֹשַׁעְתָּ֥ אֶת־יִשְׂרָאֵ֖ל … הֲלֹ֖א שְׁלַחְתִּֽיךָ׃ %}
-{% vtl Lecha b’chochacha zeh v’hoshata et-Yisra’el … halo sh’lachticha %}
+{% vtl Lecha b’chochacha zeh v’hoshata et Yisra’el … halo sh’lachticha %}
 {% vtr Go with this strength of yours and save <i>Yisrael</i> … Have I not sent you? %}
 {% endverses Judges 6:14 %}
 
