--- a/nach-2024/Judges/_posts/2024-03-03-8.md
+++ b/nach-2024/Judges/_posts/2024-03-03-8.md
@@ -32,7 +32,7 @@ enTitle: Desperation Against Certainty
 {% vtl v’lo yimshol b’ni bachem %}
 {% vtr and my son will not rule over you – %}
 {% brverses %}
-{% vhe יי יִמְשֹׁ֥ל בָּכֶֽם׃ %}
+{% vhe יי֖ יִמְשֹׁ֥ל בָּכֶֽם׃ %}
 {% vtl Adonai yimshol bachem. %}
 {% vtr <i>Adonai</i> will rule over you.’ %}
 {% endverses Judges 8:22-23 %}
