add post for I Samuel 1, tweak custom tags

--- a/nach-2024/Joshua/_posts/2024-02-07-7.md
+++ b/nach-2024/Joshua/_posts/2024-02-07-7.md
@@ -8,7 +8,7 @@ tlTitle: Lachad
 enTitle: Take
 ---
 
-- Aside from regular usage, as in {{ 'Joshua 7:15' | sefaria }}: {{ 'הנִלכד בחרם' | he:  'hanilkad b’charam', 'the [things that] were taken from the ban' }}, the word is also used to imply being chosen from a drawing of lots, as in {{ 'Joshua 7:16' | sefaria }}: {{ 'וילכד שבט יהודה' | he: 'vayilached shevet y’hudah', 'and [he/it] took the tribe of Judah' }}. This latter usage of the word is backed up by {{ '1 Samuel 14:42' | sefaria }} (found via Sefaria’s dictionary).
+- Aside from regular usage, as in {{ 'Joshua 7:15' | sefaria }}: {{ 'הנִלכד בחרם' | he:  'hanilkad b’charam', 'the [things that] were taken from the ban' }}, the word is also used to imply being chosen from a drawing of lots, as in {{ 'Joshua 7:16' | sefaria }}: {{ 'וילכד שבט יהודה' | he: 'vayilached shevet y’hudah', 'and [he/it] took the tribe of Judah' }}. This latter usage of the word is backed up by {{ 'I Samuel 14:42' | sefaria }} (found via Sefaria’s dictionary).
 - Although the scholarly consensus seems to be that this verb is used here to indicate the drawing of lots, no explicit mention of this is ever made. In fact, in the first verse that this verb appears, it always includes a subject: {{ 'Joshua 7:14' | sefaria }}: {{ 'ילכדנו יי … ילכדנה יי … ילכדנו יי' | he: 'yilk’denu Adonai … yilk’denah Adonai … yilk’denu Adonai', '*Adonai* will take [him/it] … *Adonai* will take [her/it] … *Adonai* will take [him/it]' }}. So, in my mind, the possibility of a more divine “selection” is not ruled out.
 
 <!--more-->
