add post for I Samuel 4, tweak formatting and title

--- a/nach-2024/I-Samuel/_posts/2024-03-18-2.md
+++ b/nach-2024/I-Samuel/_posts/2024-03-18-2.md
@@ -4,7 +4,7 @@ includeStatement: 1
 book: I Samuel
 chapter: 2
 verse: 6-7
-enTitle: Striking Similarity to <i>Unetaneh Tokef</i>
+enTitle: Striking Parallels to <i>Unetaneh Tokef</i>
 tags: fav
 ---
 
