add posts for I Samuel 9-11, reformat post for I Samuel 5

--- a/nach-2024/I-Samuel/_posts/2024-03-21-5.md
+++ b/nach-2024/I-Samuel/_posts/2024-03-21-5.md
@@ -26,11 +26,9 @@ tag: fav
 - As both Alter and the medieval Jewish commentator Rashi (see [Rashi on I Samuel 5:6](https://www.sefaria.org/Rashi_on_I_Samuel.5.6.2)) mention, the affliction referred to is most likely the bubonic plague, which can cause rectal tumors easily mistakable with hemorrhoids.
 - This interpretation is backed up by the Septuagint: a Greek translation of the *Tanakh* which predates any surviving complete Hebrew manuscript. Because of its earlier date, the Septuagint often contains aspects of the text which were lost before the any of the surviving Hebrew manuscripts were written. In this case, the part of this verse referenced above is replaced with a reference to mice, the bearers of the bubonic plague:
 
-<div class="verses"><table><tbody><tr>
-<td class="greek">καὶ ἐξέζεσεν αὐτοῖς εἰς τὰς ναῦς καὶ μέσον τῆς χώρας αὐτῆς ἀνεφύησαν μύες</td>
-<td class="en">and it burst out upon them into the ships, and mice sprang up in the midst of their country</td>
-</tr></tbody></table><div class="verses-attrib">
-<a href="https://biblebento.com/index.html?lxx1i&90.5.6">I Samuel 5:6 LXX</a> (<a href="https://biblehub.com/sep/1_samuel/5.htm">Brenton's Septuagint Translation</a>)
-</div></div>
+{% verses %}
+{% vgk καὶ ἐξέζεσεν αὐτοῖς εἰς τὰς ναῦς καὶ μέσον τῆς χώρας αὐτῆς ἀνεφύησαν μύες %}
+{% vtr and it burst out upon them into the ships, and mice sprang up in the midst of their country %}
+{% endversesnolink <a href="https://biblebento.com/index.html?lxx1i&90.5.6">I Samuel 5:6 LXX</a> (<a href="https://biblehub.com/sep/1_samuel/5.htm">Brenton's Septuagint Translation</a>) %}
 
 - I find these wildly divergent traditions fascinating. My take is that this is simply a difficult and disgusting story, and different communities and traditions wrangled with it in different ways.
