--- a/nach-2024/I-Samuel/_posts/2024-03-24-8.md
+++ b/nach-2024/I-Samuel/_posts/2024-03-24-8.md
@@ -15,7 +15,7 @@ enTitle: Tilted
 {% vtr and they were tilted by their cut %}
 {% brdotsverses %}
 {% vhe וַיַּטּ֖וּ מִשְׁפָּֽט׃ %}
-{% vtl yayatu mishpat %}
+{% vtl vayatu mishpat %}
 {% vtr and they tilted justice %}
 {% endverses I Samuel 8:3 %}
 
