add posts for I Samuel 12-16, change nowrapverses to scaledverses

--- a/nach-2024/Judges/_posts/2024-02-29-5.md
+++ b/nach-2024/Judges/_posts/2024-02-29-5.md
@@ -8,7 +8,7 @@ enTitle: Poetry in Every Word
 tags: fav
 ---
 
-{% nowrapverses 90 %}
+{% scaledverses 90 %}
 {% vhe בֵּ֣ין רַגְלֶ֔יהָ כָּרַ֥ע נָפַ֖ל שָׁכָ֑ב %}
 {% vtl bein ragleha kara nafal shachav %}
 {% vtr Between her legs he knelt, fell, lay %}
