--- a/nach-2024/Judges/_posts/2024-03-03-8.md
+++ b/nach-2024/Judges/_posts/2024-03-03-8.md
@@ -7,7 +7,7 @@ verse: 22-23
 enTitle: Desperation Against Certainty
 ---
 
-{% nowrapverses 92 %}
+{% scaledverses 92 %}
 {% vhe מְשָׁל־בָּ֙נוּ֙ גַּם־אַתָּ֔ה %}
 {% vtl M’shol banu gam atah %}
 {% vtr Rule over us – you, %}
