--- a/nach-2024/Judges/_posts/2024-03-10-15.md
+++ b/nach-2024/Judges/_posts/2024-03-10-15.md
@@ -8,7 +8,7 @@ enTitle: Untranslatable Grammar
 tags: fav
 ---
 
-{% nowrapverses 91 %}
+{% scaledverses 91 %}
 {% vhe וַיֹּ֕אמֶר אָבֹ֥אָה אֶל־אִשְׁתִּ֖י %}
 {% vtl vayomer avoah ‘al ishti %}
 {% vtr And he said ‘Let me come to my wife’ %}
