--- a/nach-2024/Judges/_posts/2024-03-12-17.md
+++ b/nach-2024/Judges/_posts/2024-03-12-17.md
@@ -7,7 +7,7 @@ verse: 6
 enTitle: “What Can You Do”
 ---
 
-{% nowrapverses 95 %}
+{% scaledverses 95 %}
 {% vhe בַּיָּמִ֣ים הָהֵ֔ם %}
 {% vtl B’yamim hahem %}
 {% vtr In those days %}
